<resources>
    <string name="app_name">SuperHeroApp</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="something_wrong">Oops… something went wrong</string>
    <string name="search_hero_name">Search Hero Name (Hulk, Thor, etc)</string>
    <string name="hero_image">Hero Image</string>
    <string name="image_error">Image Error</string>
    <string name="data_not_found">Oops… data not found</string>
    <string name="no_name">No Name</string>
    <string name="tap_to_favorite">Tap to Favorite</string>
    <string name="powerstat">Powerstat</string>
    <string name="biography">Biography</string>
    <string name="appearance">Appearance</string>
    <string name="additional">Additional</string>
    <string name="main_title">What Superhero are you looking for ?</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="intelligence">Intelligence</string>
    <string name="full_name">Full Name</string>
    <string name="alter_ego">Alter Ego</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="first_appearance">First Appearance</string>
    <string name="publisher">Publisher</string>
    <string name="alignment">Alignment</string>
    <string name="gender">Gender</string>
    <string name="race">Race</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="work">Work</string>
    <string name="occupation">Occupation</string>
    <string name="base">Base</string>
    <string name="connections">Connections</string>
    <string name="group_affiliation">Group Affiliation</string>
    <string name="relatives">Relatives</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_favorite_hero">Your favorite hero</string>
</resources>