<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/base"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/group_affiliation"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_group_affiliation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/relatives"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_relatives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        tools:text="@tools:sample/lorem" />

</LinearLayout>