<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.onedev.dicoding.superheroapp.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/nav_detail" />
        <action
            android:id="@+id/action_nav_home_to_nav_favorite"
            app:destination="@id/nav_favorite" />
    </fragment>
    <fragment
        android:id="@+id/nav_detail"
        android:name="com.onedev.dicoding.superheroapp.detail.DetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="heroEntity"
            app:argType="com.onedev.dicoding.superheroapp.core.domain.model.Hero" />
    </fragment>
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.onedev.dicoding.superheroapp.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_nav_favorite_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>

</navigation>